# fighting-game

./: .gitignore  Cargo.toml  README.md
src/: controls.rs  ideas  items  main.rs  rust_errors.txt  understanding-rust-2.txt  understanding-rust-errors.txt
src/asset_management/: animation.rs  animator.rs  asset_holders.rs  asset_loader.rs  cast_point.rs  collider.rs  common_assets.rs  controls.rs  frame_data.rs  mod.rs  my_point.rs  sprite_data.rs  spriter_pro_collider_loader.rs  transformation.rs
src/challenges/: challenge.rs  mod.rs
src/collision/: collider_manager.rs  collision_attack_resolution.rs  collision_detection.rs  collision_detector.rs  mod.rs
src/debug_console/: console.rs
src/ecs_system/: enemy_components.rs  enemy_manager.rs  enemy_systems.rs  entity_manager.rs  mod.rs
src/enemy_behaviour/: mod.rs  simple_enemy_behaviour.rs
src/engine_traits/: scene.rs
src/engine_types/: animation.rs  animator.rs  collider.rs  mod.rs  simple_animator.rs  transform.rs
src/game_logic/: character_factory.rs  delete_game_input.rs  enemy_factory.rs  events.rs  game.rs  game_input.rs  match_scene.rs  mod.rs  movement_controller.rs  player.rs  projectile.rs  saved_game.rs
src/input/: controller_handler.rs  handle_mouse_click.rs  input_devices.rs  input_handler.rs  mod.rs  translated_inputs.rs
src/level_generation/: generate.rs  mod.rs
src/overworld/: mod.rs  node.rs
src/rendering/: camera.rs  mod.rs  renderer.rs  renderer_event.rs  renderer_overworld.rs  renderer_store.rs  renderer_ui.rs
src/scenes/: event_scene.rs  match_scene.rs  menu_scene.rs  mod.rs  (+2 more)
(+63 files in other folders)
