[package]
name = "fighting_game"
version = "0.1.0"
authors = ["Toninho <Antonio.m.pinto@ist.utl.pt>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.125"
serde_derive = "1.0.125"
serde_json = "1.0.64"
bincode = "1.3.2"
parry2d = "0.3.0"
directories = "3.0.1"
rand = { version = "0.8.3", default-features = true, features = ["small_rng"] }
delaunator = "0.2.0"
tiled = "0.9.5"

#When you're shipping your game make sure to copy SDL2.dll to the same directory that your compiled exe is in, otherwise the game won't launch.
[dependencies.sdl2]
version = "0.34.3"
default-features = false
features = ["image", "ttf", "mixer"]
